--- a/index.html
+++ b/index.html
@@ -45,23 +45,192 @@
           <a href="#inicio">Inicio</a>
           <a href="#acerca">Acerca</a>
           <a href="#servicios">Servicios</a>
-          <a href="portafolio">Portafolio</a>
+          <a href="#portafolio">Portafolio</a>
           <a href="#testimonios">Testimonios</a>
           <a href="#contacto">Contacto</a>
         </nav>
       </section>
     </header>
     <section id="inicio" class="home">
-      <h2>Home</h2>
+      <article class="hero-image" style="--hero-image: url('assets/home-hero-image.jpg'); --hero-attachment: fixed;">
+        <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
+          <div class="hero-image-content">
+            <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
+              Bienvenidxs <br> a mi sitio
+            
+            </h2>
+            <a href="#contacto" class="btn">Contáctame</a>
+          </div>
+        </aside>
     </section>
-    <section id="acerca" class="about">
-      <h2>Acerca</h2>
+    <section id="acerca" class="about section container full-lg-screen">
+      <article class="text-lg-right">
+        <aside class="text-center text-lg-right">
+          <h1>Luciano Moore</h1>
+          <h5>Diseñador y Programador Web</h5>
+          </aside>
+          <p>I was born in Marcos Juarez, Cordoba, in 1995. At the age of 18 I moved to the capital to study Industrial Design at the Faculty of Architecture, Urbanism and Design of the UNC. As I advanced in my career I went deeper and deeper into digital design and the different areas it covers. Currently I am part of the development team of a large Argentine company in the agribusiness sector, where I apply my knowledge of 3D and interface design.</p>
+          <p>
+          Faced with the panorama of great technological    advances and the impact it has on my profession, is that I have been training as a Systems Analyst at the prestigious Faculty of Astronomy, Mathematics and Physics of the UNC. This and a series of programming courses with different languages (JavaScript, Python, Ruby, C) mark another possible path that I am eager to follow.</p>
+          <div class="text-center text-lg-right">
+            <a class="btn" href="./CV (English).pdf" download>
+            DOWNLOAD CV
+            </a>
+          </div>
+      </article>
+      <article>
+        <img class="gray-scale" src="" alt=""></article>
+      <article>
+        <h2 class="text-center text-lg-left">My Skills</h2>
+        <div class="progress">
+          <p>
+            <b>Desarrollo <i>Web Frontend</i></b>
+            <b>70%</b>
+          </p>
+          <progress value="90" min="0" max="100">
+          </progress>
+        </div>
+        <div class="progress">
+          <p>
+            <b>Diseño<i>Web</i></b>
+            <b>70%</b>
+          </p>
+          <progress value="90" min="0" max="100">
+          </progress>
+        </div>
+        <div class="progress">
+          <p>
+            <b>Interfaces de Usuario</b>
+            <b>80%</b>
+          </p>
+          <progress value="90" min="0" max="100">
+          </progress>
+        </div>
+        <div class="progress">
+          <p>
+            <b>Desarrollo <i>Web Backend</i></b>
+            <b>60%</b>
+          </p>
+          <progress value="90" min="0" max="100">
+          </progress>
+        </div>
+         </div>
+        <div class="progress">
+          <p>
+            <b>Contenido visual y Fotografìa</b>
+            <b>70%</b>
+          </p>
+          <progress value="90" min="0" max="100">
+          </progress>
+        </div>
+      </article>
     </section>
-    <section id="servicios" class="sevices">
-      <h2>Servicios</h2>
+    <section id="servicios" class="services section bg-gray-light">
+      <div class="container full-lg-screen">
+        <h2 class="section-title">¿Qué te ofrezco?</h2>
+        <article class="service-card">
+          <svg class="gray-scale" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M27 4H5.66667C4.196 4 3 5.196 3 6.66667V25.3333C3 26.804 4.196 28 5.66667 28H27C28.4707 28 29.6667 26.804 29.6667 25.3333V6.66667C29.6667 5.196 28.4707 4 27 4ZM5.66667 25.3333V9.33333H27L27.0027 25.3333H5.66667Z" fill="#D90062"/>
+          <path d="M12.9427 12.3906L8 17.3333L12.9427 22.276L14.828 20.3906L11.7707 17.3333L14.828 14.276L12.9427 12.3906ZM20.1613 12.3906L18.276 14.276L21.3333 17.3333L18.276 20.3906L20.1613 22.276L25.104 17.3333L20.1613 12.3906Z" fill="#D90062"/>
+          </svg>
+          <h3>Programación<i>Web</i></h3>
+          <p>
+            Desarrollo sitios y aplicaciones para plataformas <i>Web</i>. Te ayudo a construir tu proyecto de principio a fin: <i>Frontend</i>, <i>Backend</i> y Base de Datos.
+          </p>
+        </article>      
+        <article class="service-card">
+          <svg class="gray-scale" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M16 29.3333C17.4728 29.3333 18.6667 28.1394 18.6667 26.6667C18.6667 25.1939 17.4728 24 16 24C14.5272 24 13.3333 25.1939 13.3333 26.6667C13.3333 28.1394 14.5272 29.3333 16 29.3333Z" fill="#D90062"/>
+<path d="M16 8.00008C17.4728 8.00008 18.6667 6.80617 18.6667 5.33341C18.6667 3.86066 17.4728 2.66675 16 2.66675C14.5272 2.66675 13.3333 3.86066 13.3333 5.33341C13.3333 6.80617 14.5272 8.00008 16 8.00008Z" fill="#D90062"/>
+<path d="M8.45735 26.2093C9.93011 26.2093 11.124 25.0154 11.124 23.5426C11.124 22.0699 9.93011 20.876 8.45735 20.876C6.98459 20.876 5.79068 22.0699 5.79068 23.5426C5.79068 25.0154 6.98459 26.2093 8.45735 26.2093Z" fill="#D90062"/>
+<path d="M23.5427 11.1241C25.0154 11.1241 26.2093 9.9302 26.2093 8.45744C26.2093 6.98468 25.0154 5.79077 23.5427 5.79077C22.0699 5.79077 20.876 6.98468 20.876 8.45744C20.876 9.9302 22.0699 11.1241 23.5427 11.1241Z" fill="#D90062"/>
+<path d="M5.33334 18.668C6.80684 18.668 8.00134 17.4735 8.00134 16C8.00134 14.5265 6.80684 13.332 5.33334 13.332C3.85985 13.332 2.66534 14.5265 2.66534 16C2.66534 17.4735 3.85985 18.668 5.33334 18.668Z" fill="#D90062"/>
+<path d="M26.6667 18.6666C28.1394 18.6666 29.3333 17.4727 29.3333 15.9999C29.3333 14.5272 28.1394 13.3333 26.6667 13.3333C25.1939 13.3333 24 14.5272 24 15.9999C24 17.4727 25.1939 18.6666 26.6667 18.6666Z" fill="#D90062"/>
+<path d="M8.45735 11.1253C9.93011 11.1253 11.124 9.93142 11.124 8.45866C11.124 6.9859 9.93011 5.79199 8.45735 5.79199C6.98459 5.79199 5.79068 6.9859 5.79068 8.45866C5.79068 9.93142 6.98459 11.1253 8.45735 11.1253Z" fill="#D90062"/>
+<path d="M23.5427 26.2108C25.0154 26.2108 26.2093 25.0169 26.2093 23.5441C26.2093 22.0713 25.0154 20.8774 23.5427 20.8774C22.0699 20.8774 20.876 22.0713 20.876 23.5441C20.876 25.0169 22.0699 26.2108 23.5427 26.2108Z" fill="#D90062"/>
+          </svg>
+          <h3>Interfaces de Usuario</h3>
+          <p>
+            Diseño la composición e interacciones de tu proyecto digital
+          </p>
+        </article>
+        <article class="service-card">
+          <svg class="gray-scale" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M26.6667 4H9.33334C7.86267 4 6.66667 5.196 6.66667 6.66667V9.33333H5.33334C3.86267 9.33333 2.66667 10.5293 2.66667 12V25.3333C2.66667 26.804 3.86267 28 5.33334 28H13.3333C14.804 28 16 26.804 16 25.3333H26.6667C28.1373 25.3333 29.3333 24.1373 29.3333 22.6667V6.66667C29.3333 5.196 28.1373 4 26.6667 4ZM8.00001 12H13.3333L13.3293 24H5.33334V12H8.00001ZM16 22.6667V12C16 10.5293 14.804 9.33333 13.3333 9.33333H9.33334V6.66667H24V22.6667H16Z" fill="#D90062"/>
+        </svg>
+          </svg>
+          <h3>Diseño<i>Web</i></h3>
+          <p>
+            Prototipo y maqueteo tus diseños estáticos y los convierto en increibles sitios y aplicaciones <i>web</i> responsivas, óptimas y accesibles.
+          </p>
+        </article>
+        <article class="service-card">
+          <svg class="gray-scale" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 32H32V0H0V32ZM29.6296 22.8253L21.3799 14.5755L24.8317 11.1236L29.6296 15.9211V22.8253ZM2.37037 2.37037H29.6296V12.5689L24.8319 7.77111L19.7037 12.8994L12.2963 5.492L2.37037 15.4179V2.37037ZM2.37037 18.7704L12.2963 8.84444L29.6296 26.1778V29.6296H2.37037V18.7704Z" fill="#D90062"/>
+        </svg>
+
+          <h3>Desarrollo de componentes visuales</h3>
+          <p>
+            Modelo y renderizo imágenes y videos a partir de un contenido 3D y/o 2D de aquella idea que tuviste
+          </p>
+        </article>
+      </div>
     </section>
-    <section id="portafolio" class="portfolio">
-      <h2>Trabajos</h2>
+    <section id="portafolio" class="portfolio section">
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio.jpg" alt="Trabajo-1">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio-2.jpg" alt="Trabajo-2">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio-3.jpg" alt="Trabajo-3">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio-4.jpg" alt="Trabajo-4">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 4</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio-5.jpg" alt="Trabajo-5">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 5</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
+      <a href="#trabajo-1" class="portfolio-card">
+        <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
+        <aside class="portfolio-card-info">
+          <div>
+            <h3>Proyecto 6</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+          </div>
+        </aside>
+      </a>
     </section>
     <section id="testimonios" class="testimonials">
       <h2>Testimonios</h2>
