--- a/index.html
+++ b/index.html
@@ -177,61 +177,124 @@
       </div>
     </section>
     <section id="portafolio" class="portfolio section">
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio.jpg" alt="Trabajo-1">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+      <div class="container">
+        <h2 class="section-title">Mis Trabajos</h2>
+        <a href="#trabajo-1" class="portfolio-card">
+          <img src="assets/card-portfolio.jpg" alt="Trabajo 1">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 1</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        <a href="#trabajo-2" class="portfolio-card">
+          <img src="assets/card-portfolio-2.jpg" alt="Trabajo 2">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 2</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        <a href="#trabajo-3" class="portfolio-card">
+          <img src="assets/card-portfolio-3.jpg" alt="Trabajo 3">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 3</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        <a href="#trabajo-4" class="portfolio-card">
+          <img src="assets/card-portfolio-4.jpg" alt="Trabajo 4">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 4</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        <a href="#trabajo-5" class="portfolio-card">
+          <img src="assets/card-portfolio-5.jpg" alt="Trabajo 5">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 5</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        <a href="#trabajo-6" class="portfolio-card">
+          <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
+          <aside class="portfolio-card-info">
+            <div>
+              <h3>Proyecto 6</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+            </div>
+          </aside>
+        </a>
+        </div>
+      </section>
+    <article class="modal" id="trabajo-1">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio-2.jpg" alt="Trabajo-2">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+        <h2>Contenido del Modal 1</h2>
+      </div>
+    </article>
+    <article class="modal" id="trabajo-2">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio-3.jpg" alt="Trabajo-3">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+        <h2>Contenido del Modal 2</h2>
+      </div>
+    </article>
+    <article class="modal" id="trabajo-3">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio-4.jpg" alt="Trabajo-4">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 4</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+        <h2>Contenido del Modal 3</h2>
+      </div>
+    </article>
+    <article class="modal" id="trabajo-4">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio-5.jpg" alt="Trabajo-5">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 5</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+        <h2>Contenido del Modal 4</h2>
+      </div>
+    </article>
+    <article class="modal" id="trabajo-5">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-      <a href="#trabajo-1" class="portfolio-card">
-        <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
-        <aside class="portfolio-card-info">
-          <div>
-            <h3>Proyecto 6</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
-          </div>
-        </aside>
+        <h2>Contenido del Modal 5</h2>
+      </div>
+    </article>
+    <article class="modal" id="trabajo-6">
+      <div class="modal-content">
+      <a href="#cerrar" class="modal-close">
+      <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
+      </svg>
       </a>
-    </section>
+        <h2>Contenido del Modal 6</h2>
+      </div>
+    </article>
     <section id="testimonios" class="testimonials">
       <h2>Testimonios</h2>
     </section>
