--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           </aside>
         </a>
         </div>
-      </section>
+    </section>
     <article class="modal" id="trabajo-1">
       <div class="modal-content">
       <a href="#cerrar" class="modal-close">
@@ -242,7 +242,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 1</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio.jpg" alt="Trabajo-1">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <article class="modal" id="trabajo-2">
@@ -252,7 +267,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 2</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio-2.jpg" alt="Trabajo-2">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <article class="modal" id="trabajo-3">
@@ -262,7 +292,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 3</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio-3.jpg" alt="Trabajo-3">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <article class="modal" id="trabajo-4">
@@ -272,7 +317,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 4</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio-4.jpg" alt="Trabajo-4">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <article class="modal" id="trabajo-5">
@@ -282,7 +342,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 5</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio-5.jpg" alt="Trabajo-5">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <article class="modal" id="trabajo-6">
@@ -292,7 +367,22 @@
       <path d="M14 0.666748C6.64802 0.666748 0.666687 6.64808 0.666687 14.0001C0.666687 21.3521 6.64802 27.3334 14 27.3334C21.352 27.3334 27.3334 21.3521 27.3334 14.0001C27.3334 6.64808 21.352 0.666748 14 0.666748ZM19.6094 17.7241L17.724 19.6094L14 15.8854L10.276 19.6094L8.39069 17.7241L12.1147 14.0001L8.39069 10.2761L10.276 8.39075L14 12.1147L17.724 8.39075L19.6094 10.2761L15.8854 14.0001L19.6094 17.7241Z" fill="#CCCCCC"/>
       </svg>
       </a>
-        <h2>Contenido del Modal 6</h2>
+        <article class="portfolio-modal">
+          <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
+          <div class="portfolio-info">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <aside class="portfolio-details">
+              <small><b>CLIENT</b></small>
+              <small>Client's name</small>
+              <small><b>DATE</b></small>
+              <small>22/22/2222</small>
+              <small><b>CATEGORY</b></small>
+              <small>proyect CATEGORY</small>
+              <small><b>LINK</b></small>
+              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+            </aside>
+          </div>
+        </article>
       </div>
     </article>
     <section id="testimonios" class="testimonials">
