--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a href="#contacto" class="btn">Contáctame</a>
           </div>
         </aside>
+      </article>
     </section>
     <section id="acerca" class="about section container full-lg-screen">
       <article class="text-lg-right">
@@ -393,7 +394,53 @@
       </div>
     </article>
     <section id="testimonios" class="testimonials">
-      <h2>Testimonios</h2>
+      <article class="hero-image" style="--hero-image: url(./assets/hero-image-testimonios.png); --hero-attachment: scroll;">
+        <aside class="hero-image-opacity" style="--hero-opacity-color: var(--white-alpha-color);">
+          <div class="hero-image-content">
+            <div class="container">
+              <h2 class="seccion-title">My clients say</h2>
+              <article class="carousel" style="carrousel-bg-color: var(--white-alpha-color);">
+                <input type="radio" name="slides" id="slide-1" checked>
+                <input type="radio" name="slides" id="slide-2">
+                <input type="radio" name="slides" id="slide-3">
+                <input type="radio" name="slides" id="slide-4">
+               <ul class="slides">
+                  <li class="slide">
+                    <img src="./assets/avatar-1.png" alt="Cliente 1">
+                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
+                    <h3>Nombre del cliente</h3>
+                    <h6>Puesto del cliente</h6>
+                  </li>
+                  <li class="slide">
+                    <img src="./assets/avatar-1.png" alt="Cliente 2">
+                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
+                    <h3>Nombre del cliente</h3>
+                    <h6>Puesto del cliente</h6>
+                  </li>
+                  <li class="slide">
+                    <img src="./assets/avatar-1.png" alt="Cliente 3">
+                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
+                    <h3>Nombre del cliente</h3>
+                    <h6>Puesto del cliente</h6>
+                  </li>
+                  <li class="slide">
+                    <img src="./assets/avatar-1.png" alt="Cliente 4">
+                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
+                    <h3>Nombre del cliente</h3>
+                    <h6>Puesto del cliente</h6>
+                  </li>
+                </ul>
+                <aside class="slides-nav">
+                  <label for="slide-1" id="dot-1">eee</label>
+                  <label for="slide-1" id="dot-2">eee</label>
+                  <label for="slide-1" id="dot-3">www</label>
+                  <label for="slide-1" id="dot-4">qqqq</label>
+                </aside>
+              </article>
+            </div>
+          </div>
+        </aside>
+      </article>
     </section>
     <section id="contacto" class="contact">
       <h2>Contacto</h2>
